feat(OPENAPI):[+] Add open api docs for minting olga stamps
